# ultimate-scoreboard

./: .editorconfig  .gitignore  AGENTS.md  README.md  code.py  conftest.py  justfile  main.py  pyproject.toml  pyrefly.toml  requirements.txt  ruff.toml  score_manager.py  test_text_manager.py  text_manager.py  text_spacing.py
.github/workflows/: test.yml
fakes/: __init__.py  fake_button.py  fake_displayio.py  fake_keypad.py  fake_label.py  fake_matrixportal.py
lib/: compat.py  display_manager.py  game_controller.py  hardware_manager.py  network_manager.py  protocols.py  score_manager.py  text_manager.py
src/: compat.py  display_manager.py  game_controller.py  gender_manager.py  hardware_manager.py  network_manager.py  network_patches.py  protocols.py  score_manager.py  sync_manager.py
src/protocols/: __init__.py  board.py  button.py  keypad.py  matrixportal.py
stubs/: board.pyi  digitalio.pyi
stubs/adafruit_display_text/: __init__.pyi  label.pyi
stubs/displayio/: __init__.pyi
tests/: __init__.py  test_display_manager.py  test_game_controller.py  test_gender_manager.py  test_hardware_manager.py  test_network_manager.py  test_score_manager.py  test_text_manager.py
