[project]
name = "ultimate-scoreboard"
version = "0.1.0"
description = "A scoreboard for ultimate frisbee, keeping track of score and WMP/MMP matchup"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", ".venv", "__pycache__"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
