[project]
name = "ultimate-scoreboard"
version = "0.1.0"
description = "A scoreboard for ultimate frisbee, keeping track of score and WMP/MMP matchup"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "adafruit-circuitpython-matrixportal>=3.2.9",
]

[dependency-groups]
dev = [
    "circup>=2.2.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
    "pyrefly>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", ".venv", "__pycache__"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.pyrefly]
search-path = ["./src", "./stubs"]
project-excludes = [
    "**/*.tmp*",   # Excludes any temporary files
    "**/.*.tmp*",  # Excludes hidden temporary files
]
